# intrack

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  local.properties
app/src/androidTest/java/com/l30n4rd/intrack/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  acceleration-ins.cpp  apriltagprocessor.cpp
app/src/main/cpp/accelerationSensor/: AccelerationSensorProcessor.cpp  AccelerationSensorProcessor.h
app/src/main/cpp/utils/: DataStructures.h  Helpers.cpp  Helpers.h
app/src/main/java/com/l30n4rd/intrack/: MainActivity.kt  MainApplication.kt
app/src/main/java/com/l30n4rd/intrack/data/: PositionRepository.kt  PositionUiState.kt
app/src/main/java/com/l30n4rd/intrack/data/apriltag/: AprilTagCameraHelper.kt  AprilTagHandler.kt  AprilTagProcessorJNI.kt  AprilTagRepository.kt
app/src/main/java/com/l30n4rd/intrack/data/ins/: InsPositionLocalDataSource.kt  InsRepository.kt
app/src/main/java/com/l30n4rd/intrack/data/ins/impl/: AccelerationDirectChannelInsPositionLocalDataSourceImpl.kt  AccelerationInsJNI.kt  NoFilterInsPositionLocalDataSourceImpl.kt  RawAccelerationInsPositionLocalDataSourceImpl.kt  StepInsPositionDataSourceImpl.kt
app/src/main/java/com/l30n4rd/intrack/model/: AprilTag.kt  Ins.kt  Position.kt
app/src/main/java/com/l30n4rd/intrack/ui/: IntrackScreen.kt  PositionViewModel.kt
app/src/main/java/com/l30n4rd/intrack/ui/apriltag/: AprilTagScreen.kt
app/src/main/java/com/l30n4rd/intrack/ui/ins/: CoordinateSystem.kt  InsScreen.kt  RawValues.kt
app/src/main/java/com/l30n4rd/intrack/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/l30n4rd/intrack/utils/: FileHelper.kt  PositionHelper.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: filepaths.xml
app/src/test/java/com/l30n4rd/intrack/: ExampleUnitTest.kt
gen-libs/: build.gradle.kts
gen-libs/src/main/: AndroidManifest.xml
gen-libs/src/main/cpp/: CMakeLists.txt
gen-libs/src/main/cpp/apriltag/: CMakeLists.txt
gen-libs/src/main/cpp/apriltag/src/common/: getopt.c  homography.c
gradle/wrapper/: gradle-wrapper.properties
